# WikiRace

./: .cursorrules  .cursorrules.cursorrules.backup  .gitignore  CONTRIBUTING.md  EXAMPLE_FIXES.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  MULTIPLAYER_ISSUES.md  PORTABLE_DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  README_REVIEW.md  REVIEW_SUMMARY.md  RelaseRoadmap.txt  build_portable.py  build_portable.sh  install_client.bat  install_client.sh  pyproject.toml  start_wikirace_server.bat  start_wikirace_server.sh  test_multiplayer_issues.py  test_server_connection.py
.cursor/rules/: 00-core-project.mdc  10-ui-pyqt.mdc  20-networking-socketio.mdc  30-api-fastapi.mdc  31-deploy-uvicorn.mdc  40-project-structure.mdc  50-testing-policy.mdc  (+4 more)
.githooks/: pre-commit
docs/: MULTIPLAYER_COMPLETION_REPORT.md  MULTIPLAYER_SPEC.md  PORTABLE_DEPLOYMENT_GUIDE.md  PYQT6_CHANGES.md  SETUP_INSTRUCTIONS.md  VSCODE_SETUP.md
scripts/: README.md  build_portable.bat  build_portable.py  install_client.bat  install_client.sh  install_pyqt6.bat  install_pyqt6.py  setup.bat  setup_environment.py  setup_git_hooks.py  update_context.py
server/: .env  DEPLOYMENT.md  README.md  SETUP.md  __init__.py  api_routes.py  config.py  deploy.sh  env.example  env.template  game_logic.py  main.py  models.py  nginx.conf  redis_manager.py  requirements.txt  room_manager.py  socket_handlers.py  start_server.py  test_server.py
src/: app.py
tests/: start_multiplier_server.py  test_imports.py  test_multiplayer_tab.py  test_multiplier_gui.py  test_page_titles.py  test_python313.py  test_wikipedia_api.py
wikirace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+22 files in other folders)
